2018-02-12  Daniel Hahler  <zsh@thequod.de>

	* 42324: Completion/Unix/Command/_git: _git: handle mutually exclusive
	options.

2018-02-11  Daniel Hahler  <zsh@thequod.de>

	* 42327: Completion/Unix/Command/_make: _make: complete _files.

2018-02-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_subversion: Support
	subcommands with hyphens in their names, such as 'shelf-list
	(shelves)' from upstream 1.10 development versions.

2018-02-07  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* Christian Hesse: 42333: Completion/Unix/Command/_git: Starting
	with version 2.16.0 git no longer accepts an empty string as a
	pathspec element. Thus we have to replace empty strings with a dot.

	* Matthew Martin: 42330: Completion/Unix/Command/_ln:
	-L and -P are POSIX, but not supported by Darwin or NetBSD

	* wgh@torlan.ru: 42336: Completion/Unix/Command/_adb: force
	single column output when getting filenames with adb ls command

	* 42343: Completion/Unix/Command/_subversion: complete
	--config-option more than once

2018-01-31  Peter Stephenson  <p.stephenson@samsung.com>

	* 42332: Src/builtin.c, Src/utils.c: special case printf for
	unsigned integers by looking for constansts, avoiding conversion
	to signed.

2018-01-24  Daniel Hahler  <zsh@thequod.de>

	* 42323: Completion/Unix/Command/_git: _git: move "local" statement
	out of loop.

2018-01-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 42322 (tweaked): Src/hist.c, Src/zsh.h: don't discard a
	history line with just an interactive comment simply because
	there were no words, since the comment now doesn't produce
	words.

2018-01-23  Barton E. Schaefer  <schaefer@zsh.org>

	* Joey Pabalinas: 42313: Src/subst.c: avoid null-pointer deref
	when using ${(PA)...} on an empty array result

2018-01-23  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42317: Completion/Linux/Command/_cryptsetup,
	Completion/Linux/Command/_ethtool, Completion/Unix/Command/_wget,